<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp" >

        <TableRow
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/ic_tin5"
            android:text="demo" >

            <TextView
                android:id="@+id/txtStt"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="24dp"
                android:textStyle="bold"
                android:gravity="center"
                android:text="1" />
        </TableRow>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="5dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tinvan"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/tieude"
                android:textSize="16dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/noidung"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/noidung"
                android:textSize="14dp" />

            <TextView
                android:id="@+id/thoigian"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/thoigian"
                android:textColor="#3366CC"
                android:textSize="10dp" />
        </LinearLayout>
    </TableRow>

</LinearLayout>