<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mydrawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <android.support.v4.view.ViewPager
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity" />

    <ScrollView
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/pager2"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@layout/theme_menu"
        android:choiceMode="singleChoice" >

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"                
                android:orientation="vertical" >

                <TableRow
                    android:id="@+id/tableRow2"
                    android:layout_width="match_parent"
                    android:layout_height="24dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/bacgroundmenu" >

                    <TextView
                        android:id="@+id/tvNoiDung"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/noidung"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textSize="14dp" />
                </TableRow>

                <ListView
                    android:id="@+id/lvMenuNoiDung"
                    android:layout_width="match_parent"
                    android:layout_height="120dp" >
                </ListView>

                <TableRow
                    android:id="@+id/tableRow4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bacgroundmenu" >

                    <TextView
                        android:id="@+id/tvThietLap"
                        android:layout_width="wrap_content"
                        android:layout_height="24dp"
                        android:text="@string/thietlap"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textSize="14dp" />
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow52"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp" >

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/ic_banngay" />

                    <TextView
                        android:id="@+id/tvBanngay"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:paddingLeft="10dp"
                        android:text="@string/chedobanngay"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textSize="18dp" />
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow51"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp" >

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/ic_bandem" />

                    <TextView
                        android:id="@+id/tvBanDem"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:paddingLeft="10dp"
                        android:text="@string/chedobandem"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textSize="18dp" />
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp" >

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/ic_english" />

                    <TextView
                        android:id="@+id/tvTiengAnh"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:paddingLeft="10dp"
                        android:text="@string/english"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textSize="18dp" />
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp" >

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/ic_vietnam" />

                    <TextView
                        android:id="@+id/tvTiengViet"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:paddingLeft="10dp"
                        android:text="@string/vietnam"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textSize="18dp" />
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/bacgroundmenu" >

                    <TextView
                        android:id="@+id/tvSanPham"
                        android:layout_width="wrap_content"
                        android:layout_height="24dp"
                        android:text="@string/sanpham"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textSize="14dp" />
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp" >

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/ic_shearch" />

                    <TextView
                        android:id="@+id/tvDieuKhoan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:paddingLeft="10dp"
                        android:text="@string/dieukhoan"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textSize="18dp" />
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp" >

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/ic_phienban" />

                    <TextView
                        android:id="@+id/tvPhienBan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:paddingLeft="10dp"
                        android:text="@string/phienban"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textSize="18dp" />
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp" >

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/ic_thongtin" />

                    <TextView
                        android:id="@+id/tvThongTin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:paddingLeft="10dp"
                        android:text="@string/thongtin"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textSize="18dp" />
                </TableRow>
            </LinearLayout>
        </TableLayout>
    </ScrollView>

</android.support.v4.widget.DrawerLayout>